# FFmpegAndroidDemo

./: README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: audio.aac
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/ffmpeg/: cmdutils.h  ffmpeg.c  ffmpeg_demux.c  ffmpeg_hw.c  ffprobe.c
app/src/main/cpp/include/lame/: lame.h
app/src/main/cpp/include/libavcodec/: avcodec.h  bsf.h  codec.h  jni.h  mediacodec.h
app/src/main/cpp/include/libavfilter/: avfilter.h  buffersink.h  buffersrc.h
app/src/main/cpp/include/libavformat/: avformat.h  avio.h  network.h  url.h
app/src/main/cpp/include/libavutil/: eval.h  fifo.h  hash.h  hwcontext.h  imgutils.h  log.h  mathematics.h  md5.h  opt.h  parseutils.h  pixelutils.h
app/src/main/cpp/include/libswresample/: swresample.h
app/src/main/cpp/include/libswscale/: swscale.h
app/src/main/cpp/src/: AVProcessNode.h  AVProcessSink.h  AVSink.h  AudioDecoder.cpp  AudioDecoder.h  AudioTrackSink.cpp  AudioTrackSink.h  BaseDecoder.cpp  BaseDecoder.h  BlockingQueue.h  Error.h  MediaAVPipeline.cpp  MediaAVPipeline.h  MediaAVSync.cpp  MediaAVSync.h  MediaCodecMain.cpp  MediaController.cpp  MediaController.h  MediaPlayer.cpp  MediaPlayer.h  MediaPlayerMain.cpp  NativeAudioTrackWrapper.cpp  NativeAudioTrackWrapper.h  Util.cpp  Util.h  VideoController.cpp  VideoController.h  VideoDecoder.cpp  VideoDecoder.h  VideoEncoder.cpp  VideoEncoder.h  VideoSurfaceSink.cpp  VideoSurfaceSink.h  native-lib.cpp
app/src/main/java/com/example/ffmpegdemo/: MainActivity.kt  NativeAudioTrack.java  PlayerActivity.kt
app/src/main/res/color/: item_bg.xml
app/src/main/res/layout/: activity_main.xml  activity_player.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
